Finally fixes clickable images to fit on mobile

--- a/imageHolder.css
+++ b/imageHolder.css
@@ -31,27 +31,23 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
   overflow:auto;
 }
 
 .imageModalHolder{
-    display: block;
-    margin: auto;
-    height: 80%;
-
-    width: fit-content;
-
-    border: 10px solid rgba(81, 81, 81, 0.443);
-    border-radius: 5px;
-    object-fit: contain;
-    overflow: hidden;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
 }
 
 .imageModalImage{
-    object-fit: contain;
-    height: 100%;
+    width: 95vw;
+    box-sizing: border-box;
+    margin: 0 auto;
+    border: solid rgba(183, 183, 183, 0.36) 5px;
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 850px) {
